2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Merge-in libfs/configure.ac.
	* Makefile.am: Add libfs to SUBDIRS.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Merge-in libblock/configure.ac.
	* Makefile.am: Add libblock to SUBDIRS.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Merge-in ada/configure.ac.
	* Makefile.am: Add ada to SUBDIRS.

2003-07-03	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20030703.

2003-05-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 409:
	* include/Makefile.am: Add rtems/stdint.h
	* include/rtems/stdint.h: New.

2003-05-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 321:
	* aclocal/env-rtemscpu.m4: Remove support for profile-variant.
	* automake/compile.am: Ditto.
	* automake/local.am: Ditto.

2003-05-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Remove LIBSUFFIX_VA (unused).

2003-05-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemscpu.m4: Merge-in env-rtemsbsp.m4.
	* aclocal/env-rtemsbsp.m4: Remove.
	* aclocal/enable-rtemsbsp.m4: Remove.

2003-05-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemscpu.m4: Remove stray '/' in setting up 
	project_libdir.

2003-04-17	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20030417.

2003-04-11	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20030411.

2003-04-11	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20020411.

2003-03-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Remove '/' after $(DESTDIR) to work around
	Cygwin mistreating paths.

2003-03-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Reflect changes to project_libdir.

2003-03-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemscpu.m4: Remove obsolete comment.
	Add MULTISUBDIR to project_libdir.
